--- a/src/Pages/Project.css
+++ b/src/Pages/Project.css
@@ -55,9 +55,11 @@ hr{
 
 .projects-name {
   color: white;
-  font-size: 1.2rem;
+  font-size: 1rem;
   font-weight: bold;
   padding: 10px;
+  text-align: center;
+  align-items: center;
 }
 
 .view-more-container {
