--- a/src/Pages/ProjectDetails.css
+++ b/src/Pages/ProjectDetails.css
@@ -45,16 +45,19 @@
   padding: 20px;
   z-index: 1;
   transition: transform 0.3s ease;
+
 }
 
 /* Project name under image */
 .project-name {
   font-size: 32px; /* Larger font size for better readability */
-  font-weight: bold; /* Bold text for emphasis */
+  font-weight: 100; /* Bold text for emphasis */
   color: #f0f0f0; /* Light text for contrast */
   padding: 10px; /* Padding around the text */
   text-transform: uppercase; /* Capitalize all letters for emphasis */
   letter-spacing: 1px; /* Slightly increased spacing between letters */
+  text-align: center;
+  align-items: center;
 }
 
 /* Title styling */
